# doti

./: .gitignore  README.md  pyproject.toml
doti/: __init__.py  export_onnx.py  model.py  predict.py  predict_onnx.py  tokenizer.py  train.py
doti/model/: __init__.py  predict.py  tokenizer.py
doti/onnx/: predict.py
doti/train/: dataset.py  train.py
examples/: assert.py  onnx_usage.py  usage.py  with_onnx.py
