[project]
name = "doti"
version = "0.1.0"
description = "Add diacritics to Hebrew text"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["doti"]

[project.optional-dependencies]
torch = ["torch>=2.6.0", "numpy>=2.2.4"]
onnx = ["onnx>=1.17.0", "onnxruntime>=1.21.0"]